# laikago_sdk

./: CMakeLists.txt  ChangeLog.md
examples/: example_position.cpp  example_torque.cpp  example_velocity.cpp  example_walk.cpp  lcm_server_high.cpp  lcm_server_low.cpp  multi_pc_udp_recv.cpp  multi_pc_udp_send.cpp
examples/multi_pc/client/: udp_send_test.cpp
examples/multi_pc/server/: udp_recv_test.cpp
examples/one_pc/multi_process/server/: high_lcm_server.cpp  low_lcm_server.cpp
examples/one_pc/one_process/: position_example.cpp  torque_example.cpp  velocity_example.cpp  walk_example.cpp
include/laikago_sdk/: comm.hpp  control.hpp  loop.hpp  udp.h
lib/: liblaikago_comm.so_tx2  liblaikago_comm.so_x86
